--- a/build.gradle
+++ b/build.gradle
@@ -8,3 +8,11 @@ buildscript {
 }
 
 apply plugin: 'gradlefx'
+
+type = 'swf'
+
+dependencies {
+    test files(project.file('libs/flexUnitTasks-4.1.0-8.jar').absolutePath,
+               project.file('libs/flexunit-4.1.0-8-flex_4.1.0.16076.swc').absolutePath,
+               project.file('libs/flexunit-cilistener-4.1.0-8-4.1.0.16076.swc').absolutePath)
+}
